--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
-  "homepage": "https://Praneeth2025.github.io/portfolio",
+  
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://github.com/Azhar1086/portfolio",
+
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
     "@fortawesome/free-brands-svg-icons": "^6.5.2",
@@ -21,6 +23,7 @@
     "react-dom": "^18.3.1",
     "react-intersection-observer": "^9.10.3",
     "react-scripts": "5.0.1",
+   
     "react-scroll": "^1.9.0",
     "web-vitals": "^2.1.4"
   },
@@ -28,6 +31,7 @@
     "start": "react-scripts start",
     "deploy": "gh-pages -d build",
     "predeploy": "npm run build",
+    
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
