--- a/package.json
+++ b/package.json
@@ -1,10 +1,8 @@
 {
-  
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/Azhar1086/portfolio",
-
+  "homepage": "https://Azhar1086.github.io/portfolio",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
     "@fortawesome/free-brands-svg-icons": "^6.5.2",
@@ -22,19 +20,18 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-intersection-observer": "^9.10.3",
+    "react-router-dom": "^6.28.1",
     "react-scripts": "5.0.1",
-   
     "react-scroll": "^1.9.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
-    "deploy": "gh-pages -d build",
-    "predeploy": "npm run build",
-    
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
